--- a/flex-layout-2/style.css
+++ b/flex-layout-2/style.css
@@ -2,10 +2,12 @@ body {
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
   margin: 0;
   min-height: 100vh;
+  display: flex;
+  flex-direction: column;
 }
 
 .header {
-  height: 72px;
+  height: 10vh;
   background: darkmagenta;
   color: white;
   font-size: 32px;
@@ -15,8 +17,13 @@ body {
   align-items: center;
 }
 
+.body {
+    flex: 1;
+    display: flex;
+}
+
 .footer {
-  height: 72px;
+  height: 10vh;
   background: #eee;
   color: darkmagenta;
   display: flex;
@@ -24,27 +31,56 @@ body {
   justify-content: center;
 }
 
+li {
+  margin-bottom: 16px;
+}
+
 .sidebar {
   width: 300px;
   background: royalblue;
   box-sizing: border-box;
+  flex-shrink: 0;
+  padding:16px;
 }
 
 .card {
   border: 1px solid #eee;
   box-shadow: 2px 4px 16px rgba(0,0,0,.06);
   border-radius: 4px;
+  padding: 16px;
+  width: 300px;
 }
 
 .info {
     display: flex;
 }
 
-ul{
-    list-style: none;
+a{
+    text-decoration: none;
+    color: white;
+    font-size: 24px;
 }
 
 .container {
+    padding: 48px;
     display: flex;
-    flex-direction: column;
+    flex-wrap: wrap;
+    gap: 32px;
+}
+
+.text {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+}
+
+ul {
+    list-style: none;
+    margin: 0;
+    padding: 0;
+}
+
+.bottom {
+    display: flex;
+    align-items: end;
 }
