--- a/landing-page/style.css
+++ b/landing-page/style.css
@@ -1,11 +1,13 @@
 body{
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     min-height: 100vh;
+    margin: 0;
     display: flex;
     flex-direction: column;
 }
 .header {
     color: #F9FAF8;
+    font-weight: 900;
     background-color: #1F2937;
     display: flex;
     align-items: center;
@@ -13,34 +15,45 @@ body{
     justify-content: space-around;
 }
 
-.sub{
+.title{
     display: flex;
     flex-direction: column;
+    align-items: start;
+    font-size: 48px;
+    color: #F9FAF8;
+    font-weight: 900;
+}
+
+.sub-text {
+    font-size: 18px;
+    color: #E5E7EB;
+    font-weight: 300;
+    display: flex;
+    justify-content: center;
+    margin: 10px;
 }
 
 ul{
     list-style: none;
     display: flex;
     align-items: center;
+    gap: 25px;
 }
 a{
     text-decoration: none;
-    color: white;
+        color: #e5e7eb;
 }
 
-/* img {
-    object-fit: contain;
-} */
+#img1 {
+    width: 100px;
+    height: 100px;
+}
 
 #img2 {
     width: 25%;
-    height:25%
-}
-
-.logo{
-    display: flex;
-    width: 32px;
-    height: 32px;
+    height:25%;
+    margin: 50px;
+    
 }
 
 .sub-header {
@@ -49,6 +62,13 @@ a{
     display: flex;
     justify-content: space-evenly;
     align-items: center;
+}
+
+button {
+    background-color: #3882f6;
+    color: #F9FAF8;
+    border-radius: 8px;
+    padding: 5px;
 }
 
 .left, .right{
